took out 'constituent'
and made comparing constituents for OHG
one section to go!

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -83,9 +83,9 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
     \label{tbl:overview-intonly}
 \end{table}
 
-Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
 Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
@@ -1531,9 +1531,9 @@ I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
-I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head is a constituent that is structurally contained within the relative pronoun, and that it can therefore then be deleted.
-In the last example, neither the light head nor the relative pronoun is a constituent that is structurally contained in the other element.
-I do not discuss formal constituent containment in this chapter, because it never leads to a successful deletion when structural constituent containment does not.
+I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head is structurally contained within the relative pronoun, and that it can therefore then be deleted.
+In the last example, neither the light head nor the relative pronoun is structurally contained in the other element.
+I do not discuss formal containment in this chapter, because it never leads to a successful deletion when structural containment does not.
 
 I start with the situation in which the cases match.
 Consider the example in \ref{ex:mg-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
@@ -1617,10 +1617,10 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{n}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is a structurally constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
 
-The extra light head consists of a single constituent: the \tsc{acc}P.
-This \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+The extra light head consists of a single morpheme: the \tsc{acc}P.
+This \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wen}.
 
 I continue with the situation in which the internal case is the more complex one.
@@ -1711,10 +1711,10 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
 The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
 The extra light head consists of a single morpheme: \tit{n}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
-The extra light head consists of a single constituent: the \tsc{acc}P.
-This \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
+The extra light head consists of a single morpheme: the \tsc{acc}P.
+This \tsc{acc}P is structurally contained within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 The surface pronoun is the relative pronoun that bears the internal case: \tit{wem}.
 
 I end with the situation in which the external case is the more complex one.
@@ -1810,13 +1810,13 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{m}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
-In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
-The extra light head consists of a single constituent: the \tsc{dat}P.
+In this case, the light head is not structurally contained within the relative pronoun.
+The extra light head consists of a single morpheme: the \tsc{dat}P.
 The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 
-The relative pronoun is not a constituent that is structurally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
+The relative pronoun is not structurally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1880,4 +1880,4 @@ I derive this from the internal syntax of light heads and relative pronouns in M
 
 A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is a constituent that is contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal case is the more complex one, neither the light head nor the relative pronoun is a constituent that is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal case is the more complex one, neither the light head nor the relative pronoun is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
