--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1474,7 +1474,7 @@ Then I give an example in which the internal dative case is more complex than th
 I end with an example in which the external dative case is more complex than the internal accusative case.
 I show that the first example is grammatical and that the last two are not. I derive this by showing that only in the first situation the light head is a constituent that is structurally contained within the relative pronoun, and that it can therefore then be deleted.
 In the other two examples, neither the light head nor the relative pronoun is a constituent that is structurally contained in the other element.
-I do not discuss formal constituent containment in this chapter, because it never leads to a successful deletion when structural constituent containment does not.
+I do not discuss formal containment in this chapter, because it never leads to a successful deletion when structural containment does not.
 
 I start with the matching cases.
 Consider the example in \ref{ex:polish-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
@@ -1578,7 +1578,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The extra light head consists of two morphemes: \tit{o} and \tit{go}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
 This (higher) \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1702,7 +1702,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{mu}.
 The light head consists of two morphemes: \tit{o} and \tit{go}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
@@ -1837,13 +1837,13 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
 The relative pronoun consists of three morphemes: \tit{k}, \tit{o} and \tit{go}.
 The light head consists of two morphemes: \tit{o} and \tit{mu}.
 Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
-The extra light head consists of a single constituent: the \tsc{dat}P.
+The light head consists of two morphemes: \tit{o} and \tit{mu}.
 The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 
-The relative pronoun is not a constituent that is structurally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
+The relative pronoun is not a constituent that is structurally contained within the light head. It namely lacks the complete constituent \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
