--- a/introduction.tex
+++ b/introduction.tex
@@ -7,18 +7,8 @@ Before I discuss what this dissertation is about, I first introduce what I mean 
 Then I discuss the content of the dissertation, going step by step through the different aspects of case competition in headless relatives.
 This chapter ends with a section on what this dissertation does not discuss.
 
-% Free relatives? I use the neutral descriptive term headless relatives, because free has this free choice interpretation connotation.
-
-% I show that one aspect about case competition in headless relatives holds for all languages (under discussion here at least). That is, there is a fixed order which decides which case wins the competition. I let this follow from what we observe in morphology. Another aspect of case competition in headless relatives differs per language. That is, whether the competition takes place to begin with. I connect this variable to the morphology of the language in question.
-%
-% Case competition in headless relatives has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that case competition in headless relatives is actually more wide-spread than what has been assumed.
-% %%this is too difficult
-
-
 
 \section{Decomposing the title}
-
-% First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
 Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called the subject of the predicate \tit{mögen} `to like' is marked as nominative. What can be described as the object of \tit{mögen} `to like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
 In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mögen} `to like'.
@@ -152,14 +142,27 @@ Part \ref{part:case-facts} of this dissertation introduces the second aspect tha
 There are four logically possible language types. The first possible type is one in which the internal and the external case are allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked, light gray and dark gray cells are grammatical. I call this type the unrestricted type. The second possible type is one in which only the internal case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and light gray cells are grammatical but those in the dark gray cells are not. I call this type the internal-only type. The third possible type is one in which only the external case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and the dark gray cells are grammatical but those in the light gray cells are not. I call this type the external-only type. The fourth possible type is one in which neither the internal case nor in the external case is allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked cells are grammatical, but those in the light and dark gray cells are not. I call this type the matching type.
 
 Chapter \ref{ch:typology} introduces these possible patterns in more detail and gives examples of them in different languages. As far as I am aware, only three of these possible language types are attested in natural languages. Old High German is an example of the non-matching type, Modern German is an example of the internal-only type \citep{vogel2001}, and Polish is an example of the matching type \citep{citko2013}. To my knowledge, the external-only type is not attested.
+Chapter \ref{sec:without-case-competition} takes a small detour and discusses languages that do not show any case competition. At the end I present an overview of all logically patterns in headless relatives across language, and I show which ones are attested.
 
-Chapter \ref{sec:without-case-competition} takes a small detour and discusses languages that do not show any case competition.
+In Part \ref{part:deriving} I derive the possible patterns of languages with case competition.
+I make a few assumptions that hold for all languages and are necessary to derive the patterns. Headless relatives are derived from light-headed relatives. Light-headed relatives contain a light head and a relative pronoun. The relative pronoun consists of the features of the light head (which are phi and case features) plus at least one additional feature (here \tsc{rel}). In a headless relative either the light head or the relative pronoun is deleted. The necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) is structurally or formally contained within the other element.
 
-In Part \ref{part:deriving} I derive the possible patterns.
-assumptions
+The difference between languages arises from languages having different lexical entries that spell out the features of the light head and the relative pronoun. These different lexical entries ultimately lead to different languages types, according to the following chain.
+The different lexical entries lead to differences in the internal syntax of the light head and the relative pronoun.
+Differences in the internal syntax of the light head and the relative pronoun lead to differences in whether or not one of them is contained in the other.
+Whether or not one of them is contained in the other determines whether or not the light head or relative pronoun can be recovered and, therefore, deleted.
+Whether or not the light head or relative pronoun can be deleted determines whether or not there is a single surface pronoun and, with that, a grammatical headless relative.
+I describe this basic setup of my proposal in Chapter \ref{ch:the-basic-idea}, and I show how a different lexical entries ultimately generate the three attested language types and not the unattested one.
+
+In Chapter \ref{ch:deriving-onlyinternal}, I motivate the analysis for the internal-only type of language Modern German. I first identify the morphemes that Modern German light heads and relative pronouns consist of. Then I show which features each of the morphemes correspond to. The lexical entries are such that the light heads is contained in the relative pronoun when the cases match and when the internal case is more complex. In these cases there is a grammatical headless relative. When the external case is more complex, neither the light head nor the relative pronoun is contained in the other element, so there is no grammatical headless relative.
+
+In Chapter \ref{ch:deriving-matching}, I motivate the analysis for the matching type of language Polish. Again I identify the morphemes that the light heads and relative pronouns consist of. The crucial difference between the internal-only type of language Modern German and the matching type of language Polish is how the phi and case features are spelled out. In Modern German they are spelled out by a phi and case feature portmanteau, which is a single lexical entry. In Polish, the same features are spelled out by a phi feature morpheme and a case feature morpheme, which are two lexical entries. This difference causes a difference in containment when the internal case is more complex. In Modern German the light head is contained in the relative pronoun, but in Polish the light head is not contained in the relative pronoun. This is the crucial difference between a language of the matching type and a language of the internal-only type.
+
+Finally, in chapter \ref{ch:deriving-unrestricted}, I do the same for the unrestricted type of language Old High German. Also here I identify the morphemes that the light heads and relative pronouns consist of. I show that Old High German differs from the other two languages in that it has light heads and relative pronouns that are syncretic. That point is crucial for the unrestricted type of language, because it allows making use of formal containment: an element can be absent if it is formally contained within the other element. This is the only way in which the relative pronoun can be contained in the light head and the relative pronoun can be deleted, even though the relative pronoun contains one feature more than the light head. Toward the end of the chapter I briefly sketch what I assume the larger syntactic structure of a headless relative looks like.
 
 
-\section{The scope of this dissertation}
+
+
 
 \subsection{Case attraction}\label{sec:attraction}
 
@@ -174,18 +177,6 @@ Case attraction in headed relatives seems related, but I will not account for it
  `The shield he held was quickly shattered' \label{ex:iaheaded}\hfill Iwein 6722f., Lenerz 1984: 116)
 
 OHG has case attraction in headed relatives, Gothic does not, but both show case competition in headless relatives. So, there does not seem to be a one-to-one connection there. I leave it for further research.
-
-\subsection{Syncretism}
-
-For a long time it has been noted that syncretism seems to resolve case conflicts. --references--
-
-A language like Polish, that normally doesn't allow for any case mismatches, even allows for it. In this dissertation I do not offer a detailed account for what a derivation looks like.
-
-\exg. Jan unika kogokolwiek wczoraj obraził.\\
-Jan avoid.3\ac{sg}\scsub{[gen]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}/\ac{gen} yesterday offend.3\ac{sg}.\ac{pst}\scsub{[acc]}.\\
-`Jan avoided whoever he offended yesterday.'
-
-I won't talk about the details.
 
 \subsection{The genitive}\label{sec:genitive}
 
