--- a/discussion.tex
+++ b/discussion.tex
@@ -1,9 +1,11 @@
 % !TEX root = thesis.tex
 
-\chapter{Conclusion}\label{ch:discussion}
+\chapter{Conclusion}\label{ch:discussio}
 
 something happens in syntax
 it can be explained if you look at morphology
+
+Case competition in headless relatives has been described as some special property of a few special languages. Therefore, language-specific rules have been postulated to account for the data. My goal is to show that this phenomenon can be captured with `normal' syntactic processes, like ellipsis, c-command. The account makes predictions about how a language behaves based on the shape of its relative pronouns. And we see that case competition in headless relatives is actually more wide-spread than what has been assumed.
 
 
 Table \ref{tbl:overview-rel-light} shows per language type which of the three options is chosen when the internal and external case differ.
@@ -39,37 +41,39 @@ The language type that is not attested is the external-only type. That means tha
 What I have done in this section so far is reformulate the two descriptive parameters from Figure \ref{fig:two-parameters} into two other descriptive parameters.
 Whether the internal case is allowed to surface corresponds to whether the relative pronoun surfaces. That implicates that the light head has been deleted and is therefore absent.
 Similarly, whether the external case is allowed to surface corresponds to whether the light head surfaces. That implicates that the relative pronoun has been deleted and is therefore absent.
-I show this in Figure \ref{fig:two-parameters-different}.
+I show this in Figure \ref{fig:lexical-entries-rep}.
 
 \begin{figure}[htbp]
   \centering
-    \footnotesize{
+  \begin{tabular}[b]{c}
+    \toprule
     \begin{tikzpicture}[node distance=1.5cm]
       \node (question2) [question]
-      {{delete relative pronoun?}};
-          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
+      {ϕ+\tsc{k} portmanteau};
+          \node (outcome2) [outcome, below of=question2, xshift=-2cm, yshift=-0.5cm]
           {matching};
-              \node (example2) [example, below of=outcome2, yshift=0.25cm]
-              {\scriptsize{e.g. Polish\\\phantom{x}}};
-          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
-          {{delete light head?}};
-              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+              \node (example2) [example, below of=outcome2]
+              {e.g. Polish\\\phantom{x}\\\phantom{x}};
+          \node (question3) [question, below of=question2, xshift=2.5cm, yshift=-1cm]
+          {\tsc{lh}-\tsc{rp} syncretism};
+              \node (outcome3) [outcome, below of=question3, xshift=-2cm, yshift=-0.5cm]
               {internal-only};
-                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
-                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
-              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
-              {un-restricted};
-                  \node (example4) [example, below of=outcome4, yshift=0.25cm]
-                  {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
+                  \node (example3) [example, below of=outcome3]
+                  {e.g. Modern German\\\phantom{x}};
+              \node (outcome4) [outcome, below of=question3, xshift=2cm, yshift=-0.5cm]
+              {unrestricted};
+                  \node (example4) [example, below of=outcome4]
+                  {e.g. Gothic, Old High German, Classical Greek};
 
     \draw [arrow] (question2) -- node[anchor=east] {no} (outcome2);
     \draw [arrow] (question2) -- node[anchor=west] {yes} (question3);
     \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
     \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-    \end{tikzpicture}
-    }
-    \caption{Delete relative pronoun/light head as parameters}
-    \label{fig:two-parameters-different}
+    \end{tikzpicture}\\
+    \bottomrule
+  \end{tabular}
+    \caption{Different lexical entries generate three language types (repeated)}
+    \label{fig:lexical-entries-rep}
 \end{figure}
 
 Reformulating these parameters is not just restating the generalization in different terms. With this new formulation, I am able to identify the elements (i.e. the light head and the relative pronoun) that bear the internal and external cases. The difference between languages lies in whether or not it is possible to delete the light head (and with it the external case) and the relative pronoun (and with it the internal case).
